@@ -18,6 +18,10 @@ sub get_help_provider {
 
 sub find_help_topic {
 	my ($self) = @_;
+	
+	# TODO: recognize tags with dash in the name: background-color
+	# TODO: recognize values that include a number: 4px
+	# TODO: recognize pseudo-class selectors:   :visited
 
 	# TODO code copied from Padre::Wx::Dialog::HelpSearch::find_help_topic
 	# eliminate duplication!
@@ -33,11 +37,11 @@ sub find_help_topic {
 		);
 	}
 
-	warn "Topic '$topic'";
+	#warn "Topic '$topic'";
 	return if not $topic;
 	$topic =~ s/://;
 	
-	return $topic;
+	return lc $topic;
 }
 
 
